---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: Invalid quantifier macro pattern: expected a lambda function, but found an inlined expression
  ┌─ tests/../../../packages/prover/sources/vector.move:9:1
  │
9 │ public native fun begin_map_lambda<T>(v: &vector<T>): &T;
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
